# bc-generalization-mhc-gnn

./: .gitignore  LICENSE  README.md  RESULTS.md  main.py  pyproject.toml
configs/: README.md  baseline_appnp.yaml  baseline_gat.yaml  baseline_gcn.yaml  baseline_gcnii.yaml  baseline_gin.yaml  baseline_jknet.yaml  baseline_sage.yaml  depth_sweep.yaml  depth_sweep_appnp_hc.yaml  depth_sweep_gcnii_hc.yaml  depth_sweep_jknet_hc.yaml  hc_appnp.yaml  hc_gcn.yaml  hc_gcnii.yaml  hc_jknet.yaml  mhc_appnp.yaml  mhc_gcn.yaml  mhc_gcnii.yaml  mhc_jknet.yaml  mhc_lite_appnp.yaml  mhc_lite_gcn.yaml  mhc_lite_gcnii.yaml  mhc_lite_jknet.yaml  multi_seed_appnp.yaml  multi_seed_duels.yaml  multi_seed_duels_v2.yaml  multi_seed_gcn.yaml  multi_seed_gcnii.yaml  multi_seed_jknet.yaml  multi_seed_mhc_appnp.yaml  multi_seed_mhc_gcn.yaml  multi_seed_mhc_gcnii.yaml  multi_seed_mhc_jknet.yaml  multi_seed_mhc_lite_gcnii.yaml  multi_seed_smoke_duels.yaml  multi_seed_smoke_gcn.yaml  multi_seed_smoke_mhc_gcn.yaml  multiseed_appnp.yaml  multiseed_gat.yaml  (+22 more)
configs/analysis/: hc_matrices_gcn.yaml  model_budget.yaml  model_params_wide.yaml  paper_figures_gcn_family.yaml
configs/hp_search/: gcn_proxy.yaml  gcnii_proxy.yaml  smoke.yaml
configs/multi_seed/: catalog.yaml
configs/real_graph_transfer/: gcn_family_citeseer.yaml  gcn_family_cora.yaml  gcn_family_pubmed.yaml  gcn_family_sizegen_l8_citeseer.yaml  gcn_family_sizegen_l8_cora.yaml  gcn_family_sizegen_l8_pubmed.yaml
docs/: potential_patches.md  project_summary.tex
scripts/: collect_results.py  plot_depth_curves.py
src/: eval.py  train.py
(+67 files in other folders)
