[project]
name = "bc-generalization-mhc-gnn"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "networkx",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torch-geometric",
    "pyg-lib==0.4.0+pt25cu121",
    "torch-scatter==2.1.2+pt25cu121",
    "torch-sparse==0.6.18+pt25cu121",
    "torch-cluster==1.6.3+pt25cu121",
    "torch-spline-conv==1.2.2+pt25cu121",
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu121.html"]
environments = ["sys_platform == 'linux' and python_version == '3.11'"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
torch-spline-conv = ["torch"]
pyg-lib = ["torch"]
